--- a/syrine2.html
+++ b/syrine2.html
@@ -53,9 +53,13 @@
         <p>Email: <a href="mailto:rebaisyrine046@gmail.com">rebaisyrine046@gmail.com</a></p>
     </section>
 
-    <!-- Bootstrap JS and dependencies -->
+   
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <p>
+        <a href="C:\Users\Lenovo\Downloads\syrine2.pdf" class="btn btn-primary" download>Télécharger mon CV</a>
+    </p>
 </body>
 </html>
